force-app/main/default/objects/AI_Screening_Result__c/AI_Screening_Result__c.object-meta.xml
<CustomObject>
    <label>AI Screening Result</label>
    <nameField>
        <displayFormat>AI-{0000}</displayFormat>
        <label>AI Screening Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Screening Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>