force-app/main/default/objects/AI_Screening_Result__c/fields/AI_Model__c.field-meta.xml
<CustomField>
    <fullName>AI_Model__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AI Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>