force-app/main/default/objects/AI_Screening_Result__c/fields/Combined_Score__c.field-meta.xml
<CustomField>
    <fullName>Combined_Score__c</fullName>
    <description>Weighted average of AI + Rules</description>
    <formula>(Overall_Score__c * 0.5) + (Traditional_Score__c * 0.5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combined Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>