force-app/main/default/objects/AI_Screening_Result__c/fields/Concerns__c.field-meta.xml
<CustomField>
    <fullName>Concerns__c</fullName>
    <description>JSON array of concern items</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Key Concerns</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>