force-app/main/default/objects/AI_Screening_Result__c/fields/Correlation_ID__c.field-meta.xml
<CustomField>
    <fullName>Correlation_ID__c</fullName>
    <description>Links to traditional screening run</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Correlation ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>