force-app/main/default/objects/AI_Screening_Result__c/fields/Execution_Time__c.field-meta.xml
<CustomField>
    <fullName>Execution_Time__c</fullName>
    <description>Time taken for AI analysis</description>
    <label>Execution Time (ms)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>