force-app/main/default/objects/AI_Screening_Result__c/fields/Full_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Full_Analysis__c</fullName>
    <description>Complete AI response text</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Full AI Analysis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>