force-app/main/default/objects/AI_Screening_Result__c/fields/Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Updated</label>
    <type>DateTime</type>
</CustomField>