force-app/main/default/objects/AI_Screening_Result__c/fields/Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Score__c</fullName>
    <description>0-100 score from AI analysis</description>
    <label>Overall AI Score</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>