force-app/main/default/objects/AI_Screening_Result__c/fields/Prompt_Version__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Version__c</fullName>
    <description>Version of system prompt used</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Prompt Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>