force-app/main/default/objects/AI_Screening_Result__c/fields/Quick_Summary__c.field-meta.xml
<CustomField>
    <fullName>Quick_Summary__c</fullName>
    <description>2-3 sentence executive summary</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Quick Summary</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>