force-app/main/default/objects/AI_Screening_Result__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <label>AI Recommendation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STRONGLY_RECOMMEND</fullName>
            </value>
            <value>
                <fullName>RECOMMEND</fullName>
            </value>
            <value>
                <fullName>NEUTRAL</fullName>
            </value>
            <value>
                <fullName>NOT_RECOMMEND</fullName>
            </value>
            <value>
                <fullName>STRONGLY_NOT_RECOMMEND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>