force-app/main/default/objects/AI_Screening_Result__c/fields/Response_Raw__c.field-meta.xml
<CustomField>
    <fullName>Response_Raw__c</fullName>
    <description>Complete JSON response from Grok</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Raw API Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>