force-app/main/default/objects/AI_Screening_Result__c/fields/Rules_Evaluated__c.field-meta.xml
<CustomField>
    <fullName>Rules_Evaluated__c</fullName>
    <description>Number of traditional rules considered</description>
    <label>Rules Evaluated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>