force-app/main/default/objects/AI_Screening_Result__c/fields/Strengths__c.field-meta.xml
<CustomField>
    <fullName>Strengths__c</fullName>
    <description>JSON array of strength items</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Key Strengths</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>