force-app/main/default/objects/AI_Screening_Result__c/fields/Top_3_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Top_3_Concerns__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Top_3_Concerns</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>