force-app/main/default/objects/AI_Screening_Result__c/fields/Traditional_Score__c.field-meta.xml
<CustomField>
    <fullName>Traditional_Score__c</fullName>
    <description>Pass rate from rule-based screening</description>
    <label>Traditional Rule Score</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>